# leanviser-console

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/modules/: __init__.py
backend/app/modules/finance/: __init__.py
backend/app/modules/finance/adapters/: __init__.py  fixed_exchange_rate_provider.py  invoice_serialization.py  postgres_invoice_repository.py  sqlite_invoice_repository.py  tcmb_exchange_rate_provider.py  ubl_tr.py  uyumsoft_einvoice_gateway.py
backend/app/modules/finance/application/: __init__.py  compile_invoice.py  einvoice_gateway.py  einvoice_models.py  exchange_rate_provider.py  invoice_repository.py  issue_einvoice.py
backend/app/modules/finance/domain/: __init__.py  expense.py  fee_calculation.py  fx.py  gib_invoice_number.py  invoice.py  money.py  vat.py
backend/app/shared/: __init__.py
backend/tests/: test_domain_placeholder.py  test_health.py
backend/tests/finance/: test_expense.py  test_fee_calculation.py  test_fx.py  test_gib_invoice_number.py  test_invoice.py  test_money.py  test_vat.py
backend/tests/finance/adapters/: test_invoice_api.py  test_invoice_serialization.py  test_postgres_invoice_repository.py  test_sqlite_invoice_repository.py  test_tcmb_exchange_rate_provider.py  test_ubl_tr.py  test_uyumsoft_einvoice_gateway.py  test_uyumsoft_envelope.py  test_uyumsoft_gateway_errors.py
backend/tests/finance/application/: test_compile_invoice.py  test_issue_einvoice.py
frontend/: index.html  package-lock.json  (+2 more)
(+11 files in other folders)
