[project]
name = "leanviser-console-backend"
version = "0.1.0"
description = "LeanViser CONSOLE — internal operations backend (finance route)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "psycopg[binary]>=3.3.4",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
]

# Bu bir kütüphane değil, çalıştırılabilir uygulama: uv projeyi paket olarak kurmaz.
[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
